# regvps-telegram-bot

./: .env.example  .gitignore  README.md  pyproject.toml
tests/: test_balance.py  test_config.py  test_minecraft_handlers.py  test_reglet_brief.py  test_regru_client.py  test_remote_mcops.py  test_telegram_inline_kb.py
vps_telegram_bot/: __init__.py  __main__.py  bot.py  config.py  dotenv_bootstrap.py  minecraft_handlers.py  reglet_brief.py  regru_client.py  remote_mcops.py  telegram_inline_kb.py
